feat: added Drifty GUI tests using TestFx
Signed-off-by: Saptarshi Sarkar <saptarshi.programmer@gmail.com>